force-app/main/default/objects/WorkBreakdownStructure__c/WorkBreakdownStructure__c.object-meta.xml
<CustomObject>
    <label>Work Breakdown Structure</label>
    <nameField>
        <label>Work Breakdown Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Breakdown Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>