force-app/main/default/objects/WorkBreakdownStructure__c/fields/Brigade__c.field-meta.xml
<CustomField>
    <fullName>Brigade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brigade</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EngineeringUnit</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SubContractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Breakdown Structures</relationshipLabel>
    <relationshipName>Work_Breakdown_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>