force-app/main/default/objects/WorkBreakdownStructure__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Work Breakdown Structures</relationshipLabel>
    <relationshipName>Work_Breakdown_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>