force-app/main/default/objects/WorkBreakdownStructure__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>WorkBreakdownStructureItem__c.Price__c</summarizedField>
    <summaryForeignKey>WorkBreakdownStructureItem__c.WorkBreakdownStructure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>