force-app/main/default/objects/WorkBreakdownStructure__c/validationRules/BrigadeIdentifier.validationRule-meta.xml
<ValidationRule>
    <fullName>BrigadeIdentifier</fullName>
    <active>true</active>
    <description>Check account record type name</description>
    <errorConditionFormula>Brigade__r.RecordType.DeveloperName  = &apos;Customer&apos;</errorConditionFormula>
    <errorDisplayField>Brigade__c</errorDisplayField>
    <errorMessage>The Brigade field can&apos;t have a Customer type</errorMessage>
</ValidationRule>